# TeleVM

./: Cargo.toml
.cargo/: config.toml
address_space/src/: address_space.rs
boot_loader/: Cargo.toml
cpu/: Cargo.toml
devices/: Cargo.toml
devices/src/: lib.rs  pcie_mem.rs
kvm-bindings/: Cargo.toml
kvm-ioctls/: Cargo.toml
machine/: Cargo.toml
machine/src/: lib.rs
machine/src/micro_vm/: mem_layout.rs  mod.rs
machine_manager/: Cargo.toml
machine_manager/src/: cmdline.rs  machine.rs  test_server.rs
machine_manager/src/config/: mod.rs  vnc.rs
machine_manager/src/qmp/: qmp_schema.rs
pci/: Cargo.toml
src/: main.rs
sysbus/: Cargo.toml
sysbus/src/: lib.rs
tests/mod_test/: Cargo.toml
tests/mod_test/src/: libtest.rs  utils.rs
tests/mod_test/src/libdriver/: fwcfg.rs  mod.rs  pci.rs  pci_bus.rs  usb.rs  virtio_block.rs  virtio_console.rs  virtio_gpu.rs  virtio_pci_modern.rs  virtio_rng.rs  vnc.rs
tests/mod_test/tests/: balloon_test.rs  block_test.rs  memory_test.rs  mod.rs  net_test.rs  pci_test.rs  pl031_test.rs  scsi_test.rs
util/: Cargo.toml
util/src/: bitmap.rs  loop_context.rs  test_helper.rs
util/src/aio/: mod.rs
virtio/: Cargo.toml
virtio/src/: block.rs  lib.rs
vnc/: Cargo.toml
vnc/src/: vencrypt.rs
