[package]
name = "TeleVM"
version = "1.0.0"
authors = ["Huawei StratoVirt Team", "China Telecom"]
edition = "2021"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
kvm-ioctls = { path = "kvm-ioctls" }
libc = "0.2"
log = "0.4"
vmm-sys-util = ">=0.10.0"
machine = { path = "machine" }
machine_manager = { path = "machine_manager" }
util = { path = "util" }
virtio = { path = "virtio" }
[target.'cfg(not(target_env = "musl"))'.dependencies]
vnc = { path = "vnc" }

[workspace]
members = [
	"tests/mod_test",
	"address_space",
	"boot_loader",
	"cpu",
	"devices",
	"hypervisor",
	"machine",
	"machine_manager",
	"migration",
	"migration_derive",
	"pci",
	"sysbus",
	"util",
	"acpi",
	"virtio",
	"vhost_user_fs",
	"ozone",
	"vfio",
]
